--- a/ui/main.css
+++ b/ui/main.css
@@ -287,3 +287,5 @@
 {{MediaWiki:Torus.js/ui/themes/default.css}}
 
 {{MediaWiki:Torus.js/ui/themes/plain.css}}
+
+{{MediaWiki:Torus.js/ext/logs.css}}
