--- a/ui.css
+++ b/ui.css
@@ -10,6 +10,17 @@
 	color: #000;
 }
 
+#torus.fullscreen {
+	position: fixed;
+	height: 100%;
+	width: 100%;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	margin: 0;
+}
+
 #torus-tabs {
 	position: absolute;
 	top: 0;
@@ -224,6 +235,7 @@
 	overflow-x: hidden;
 	list-style: none;
 	font-family: monospace;
+	white-space: pre;
 	word-wrap: break-word;
 }
 #torus-window div.torus-message-inactive {
