--- a/ui/main.css
+++ b/ui/main.css
@@ -274,8 +274,8 @@
 	cursor: pointer;
 }
 
-{{MediaWiki:Torus.js/menu.css}}
+{{MediaWiki:Torus.js/ui/menu.css}}
 
-{{MediaWiki:Torus.js/options.css}}
+{{MediaWiki:Torus.js/ui/options.css}}
 
 {{MediaWiki:Torus.js/ext/ccui.css}}
