pings as its own extension

--- a/ui/main.css
+++ b/ui/main.css
@@ -70,6 +70,51 @@
 }
 #torus-tab--1 img {vertical-align: top;}
 
+#torus-info {
+	position: absolute;
+	top: 3em;
+	left: 0;
+	right: 15em;
+	height: 2em;
+	line-height: 2em;
+	background-color: #dde;
+	border-top: 1px solid #000;
+	border-right: 1px solid #000;
+	text-align: center;
+}
+
+#torus-window {
+	position: absolute;
+	top: 5em;
+	bottom: 4em;
+	left: 0;
+	right: 15em;
+	background-color: #ccf;
+	border-top: 1px solid #000;
+	border-right: 1px solid #000;
+	margin: 0;
+	padding: .3em .5em;
+	overflow-y: scroll;
+	overflow-x: hidden;
+	list-style: none;
+	font-family: monospace;
+	word-wrap: break-word;
+}
+#torus-window div.torus-message-inactive {color: #666;}
+#torus-window span.torus-message-ping {color: red;}
+#torus-window span.torus-whitespace {white-space: pre;}
+#torus-window fieldset {border: 1px solid #66f;}
+#torus-window fieldset legend {font-size: 1.5em;}
+#torus-window textarea {
+	resize: vertical;
+	width: 100%;
+	display: block;
+}
+#torus-window input[type="checkbox"] {
+	vertical-align: bottom;
+	margin: 0;
+}
+
 #torus-sidebar {
 	position: absolute;
 	top: 3em;
@@ -105,6 +150,19 @@
 	vertical-align: baseline;
 }
 #torus-sidebar img.torus-user-icon-staff {margin-top: .2em;}
+#torus-sidebar li.torus-sidebar-button {
+	padding: .1em .5em;
+	background-color: #99f;
+	cursor: pointer;
+	font-size: larger;
+}
+#torus-sidebar li.torus-sidebar-button:hover {
+	background-color: #def;
+}
+#torus-sidebar li.torus-sidebar-button-selected,
+#torus-sidebar li.torus-sidebar-button-selected:hover {
+	background-color: #fff;
+}
 
 #torus-popup {
 	min-width: 15em;
@@ -200,39 +258,6 @@
 #torus-popup-banbutton {cursor: pointer;}
 #torus-popup a.torus-popup-action:hover #torus-popup-banmodal {display: block;}
 
-#torus-info {
-	position: absolute;
-	top: 3em;
-	left: 0;
-	right: 15em;
-	height: 2em;
-	line-height: 2em;
-	background-color: #dde;
-	border-top: 1px solid #000;
-	border-right: 1px solid #000;
-	text-align: center;
-}
-
-#torus-window {
-	position: absolute;
-	top: 5em;
-	bottom: 4em;
-	left: 0;
-	right: 15em;
-	background-color: #ccf;
-	border-top: 1px solid #000;
-	border-right: 1px solid #000;
-	margin: 0;
-	padding: .3em .5em;
-	overflow-y: scroll;
-	overflow-x: hidden;
-	list-style: none;
-	font-family: monospace;
-	word-wrap: break-word;
-}
-#torus-window div.torus-message-inactive {color: #666;}
-#torus-window span.torus-message-ping {color: red;}
-#torus-window span.torus-whitespace {white-space: pre;}
 #torus-input {
 	position: absolute;
 	bottom: 0;
@@ -252,12 +277,6 @@
 	resize: none;
 }
 
-.torus-fakelink {
-	cursor: pointer;
-}
-
 {{MediaWiki:Torus.js/ui/menu.css}}
-
-{{MediaWiki:Torus.js/ui/options.css}}
 
 {{MediaWiki:Torus.js/ext/ccui.css}}
