--- a/ui/main.css
+++ b/ui/main.css
@@ -5,10 +5,8 @@
 	height: 50em;
 	width: 98%;
 	margin: 1em auto;
-	border: 1px solid #000;
 	font-size: 11px;
 	line-height: 1.5em;
-	color: #000;
 }
 
 #torus.fullscreen {
@@ -29,7 +27,6 @@
 	left: 0;
 	right: 0;
 	height: 3em;
-	background-color: #66f;
 }
 #torus-tabs span.torus-tab {
 	position: relative;
@@ -37,32 +34,20 @@
 	margin: 0 .3em;
 	padding: .1em .3em;
 	border-radius: .4em;
-	background-color: #99f;
-	border: 1px solid #ccc;
 	font-size: 1.5em;
 	cursor: pointer;
 }
-#torus-tabs span.torus-tab-viewing,
-#torus-tabs span.torus-tab:hover {
-	background-color: #def;
-}
 #torus-tabs span.torus-tab-active,
 #torus-tabs span.torus-tab-active:hover {
-	background-color: #fff;
 	font-weight: bold;
 }
-#torus-tabs span.torus-tab-alert {color: #909;}
-#torus-tabs span.torus-tab-message {color: #ff0;}
-#torus-tabs span.torus-tab-ping {color: red;}
 #torus-tabs span.torus-tab-close {
 	font-size: .65em;
 	margin-left: .6em;
 	vertical-align: top;
 	line-height: .8em;
 	font-weight: bold;
-	color: #000;
 }
-#torus-tabs span.torus-tab-close:hover {color: red;}
 #torus-tabs #torus-tab--1 { /*#id #id is dumb but without this #torus-tabs span.torus-tab overrides this*/
 	position: absolute;
 	top: .2em;
@@ -77,9 +62,6 @@
 	right: 15em;
 	height: 2em;
 	line-height: 2em;
-	background-color: #dde;
-	border-top: 1px solid #000;
-	border-right: 1px solid #000;
 	text-align: center;
 }
 
@@ -89,9 +71,6 @@
 	bottom: 4em;
 	left: 0;
 	right: 15em;
-	background-color: #ccf;
-	border-top: 1px solid #000;
-	border-right: 1px solid #000;
 	margin: 0;
 	padding: .3em .5em;
 	overflow-y: scroll;
@@ -100,20 +79,7 @@
 	font-family: monospace;
 	word-wrap: break-word;
 }
-#torus-window div.torus-message-inactive {color: #666;}
-#torus-window span.torus-message-ping {color: red;}
 #torus-window span.torus-whitespace {white-space: pre;}
-#torus-window fieldset {border: 1px solid #66f;}
-#torus-window fieldset legend {font-size: 1.5em;}
-#torus-window textarea {
-	resize: vertical;
-	width: 100%;
-	display: block;
-}
-#torus-window input[type="checkbox"] {
-	vertical-align: bottom;
-	margin: 0;
-}
 
 #torus-sidebar {
 	position: absolute;
@@ -123,8 +89,6 @@
 	width: 15em;
 	margin: 0;
 	padding: .2em 0;
-	background-color: #66f;
-	border-top: 1px solid #000;
 	list-style: none;
 	white-space: nowrap;
 	overflow-x: hidden;
@@ -136,7 +100,6 @@
 }
 #torus-sidebar li.torus-user {padding-left: 1.5em;}
 #torus-sidebar span.torus-user-away {
-	color: #666;
 	font-style: italic;
 }
 #torus-sidebar li.torus-user-mod,
@@ -152,16 +115,8 @@
 #torus-sidebar img.torus-user-icon-staff {margin-top: .2em;}
 #torus-sidebar li.torus-sidebar-button {
 	padding: .1em .5em;
-	background-color: #99f;
 	cursor: pointer;
 	font-size: larger;
-}
-#torus-sidebar li.torus-sidebar-button:hover {
-	background-color: #def;
-}
-#torus-sidebar li.torus-sidebar-button-selected,
-#torus-sidebar li.torus-sidebar-button-selected:hover {
-	background-color: #fff;
 }
 
 #torus-popup {
@@ -169,8 +124,6 @@
 	position: absolute;
 	right: 15em;
 	z-index: 10;
-	background-color: #66f;
-	border: 1px solid black;
 	white-space: nowrap;
 }
 #torus-popup-avatar {
@@ -178,7 +131,6 @@
 	width: 3.5em;
 	margin: .5em;
 	margin-left: .7em;
-	border: 1px solid #ccc;
 }
 #torus-popup-info {
 	height: 4.5em;
@@ -188,12 +140,10 @@
 }
 #torus-popup-name,
 #torus-popup-name a {
-	color: #000;
 	font-size: larger;
 	font-weight: bold;
 }
 #torus-popup-access {
-	color: #0f0;
 	font-size: 1.5em;
 	font-weight: bold;
 }
@@ -207,9 +157,7 @@
 #torus-popup a.torus-popup-action-disabled {
 	display: block;
 	width: 100%;
-	border-top: 1px solid #ccc;
-	border-bottom: 1px solid #ccc;
-	background-color: #99f;
+	padding: .5em 0;
 	text-align: center;
 	text-decoration: none;
 }
@@ -229,13 +177,10 @@
 }
 #torus-popup a.torus-popup-userlink:hover,
 #torus-popup a.torus-popup-action:hover {
-	background-color: #def;
 	cursor: pointer;
 }
 #torus-popup a.torus-popup-action-disabled,
 #torus-popup a.torus-popup-action-disabled:hover {
-	background-color: #ddd;
-	color: #999;
 	cursor: default;
 }
 #torus-popup-modconfirm,
@@ -243,17 +188,14 @@
 	display: none;
 	position: absolute;
 	right: 100%;
-	background-color: #66f;
-	padding: .1em .3em;
+	padding: .5em;
 	bottom: -1px;
-	border: 1px solid #000;
-	color: #000;
-	border-right: 1px solid #555;
 	cursor: default;
 }
 #torus-popup-modconfirm {
 	bottom: auto;
 	margin-top: -.5em;
+	padding: .5em;
 }
 #torus-popup-banbutton {cursor: pointer;}
 #torus-popup a.torus-popup-action:hover #torus-popup-banmodal {display: block;}
@@ -265,8 +207,6 @@
 	right: 0;
 	height: 3.2em;
 	padding: .4em .3em;
-	background-color: #66f;
-	border-top: 1px solid #000;
 }
 #torus-input-box {
 	-webkit-box-sizing: border-box;
@@ -280,5 +220,7 @@
 #torus a.torus-fakelink {cursor: pointer;}
 
 {{MediaWiki:Torus.js/ui/menu.css}}
+
+{{MediaWiki:Torus.js/ui/themes/default.css}}
 
 {{MediaWiki:Torus.js/ext/ccui.css}}
