--- a/ui/menu.css
+++ b/ui/menu.css
@@ -23,3 +23,15 @@
 #torus-menu-extensions a:hover {
 	background-color: #def;
 }
+
+#torus-window fieldset {border: 1px solid #66f;}
+#torus-window fieldset legend {font-size: 1.5em;}
+#torus-window textarea {
+	resize: vertical;
+	width: 100%;
+	display: block;
+}
+#torus-window input[type="checkbox"] {
+	vertical-align: bottom;
+	margin: 0;
+}
