--- a/ui/menu.css
+++ b/ui/menu.css
@@ -24,6 +24,25 @@
 	background-color: #def;
 }
 
+#torus-themes-table {
+	border-spacing: 0;
+	text-align: center;
+}
+#torus-themes-table > tr > td {
+	padding: 1em 0;
+	border-bottom: 1px solid #999;
+}
+#torus-themes-table > tr:last-child > td {border-bottom: 0;}
+#torus-themes-table > tr > td:first-child {width: 30%;}
+#torus-themes-table > tr > td:last-child {width: 70%;}
+#torus-themes-table label.torus-theme-label {font-size: 150%;}
+#torus-themes-table table.torus-theme-preview {border-spacing: 0;}
+#torus-themes-table table.torus-theme-preview td {
+	border-left-width: 0;
+	min-width: 12em;
+}
+#torus-themes-table table.torus-theme-preview td:first-child {border-left-width: 1px;} /* FIXME: */
+
 #torus-window fieldset {border: 1px solid #66f;}
 #torus-window fieldset legend {font-size: 1.5em;}
 #torus-window textarea {
