--- a/ui/main.css
+++ b/ui/main.css
@@ -275,6 +275,8 @@
 
 #torus a.torus-fakelink {cursor: pointer;}
 
+{{MediaWiki:Torus.js/ui/themes/creampuff.css}}
+
 {{MediaWiki:Torus.js/ui/themes/default.css}}
 
 {{MediaWiki:Torus.js/ui/themes/plain.css}}
