--- a/ui/main.css
+++ b/ui/main.css
@@ -260,7 +260,10 @@
 	border-left: 0;
 	min-width: 12em;
 }
-#torus-themes-table table.torus-theme-preview td:first-child {border-left: 1px solid;}
+#torus-themes-table table.torus-theme-preview td:first-child {
+	border-left-width: 1px;
+	border-left-style: solid;
+}
 
 #torus-window fieldset legend {font-size: 1.5em;}
 #torus-window textarea {
