--- a/ui/themes/creampuff.css
+++ b/ui/themes/creampuff.css
@@ -104,6 +104,10 @@ table#torus-preview-creampuff.torus-theme-preview .text4, #torus.theme-creampuff
 	background-color: #f66;
 	border-top: 1px solid #000;
 }
+#torus.theme-creampuff #torus-input-box {
+	background-color: #fff;
+	color: #000;
+}
 
 #torus.theme-creampuff #torus-menu-extensions a {
 	background-color: #f99;
@@ -112,3 +116,9 @@ table#torus-preview-creampuff.torus-theme-preview .text4, #torus.theme-creampuff
 	background-color: #fed;
 }
 #torus.theme-creampuff #torus-window fieldset {border: 1px solid #909;}
+#torus.theme-creampuff #torus-window textarea,
+#torus.theme-creampuff #torus-window input[type="text"],
+#torus.theme-creampuff #torus-window input[type="number"] {
+	background-color: #fff;
+	color: #000;
+}
