--- a/ui/themes/plain.css
+++ b/ui/themes/plain.css
@@ -104,6 +104,10 @@ table#torus-preview-plain.torus-theme-preview .text4, #torus.theme-plain .text4 
 	background-color: #ddd;
 	border-top: 1px solid #000;
 }
+#torus.theme-plain #torus-input-box {
+	background-color: #fff;
+	color: #000;
+}
 
 #torus.theme-plain #torus-menu-extensions a {
 	background-color: #eee;
@@ -112,3 +116,9 @@ table#torus-preview-plain.torus-theme-preview .text4, #torus.theme-plain .text4 
 	background-color: #fff;
 }
 #torus.theme-plain #torus-window fieldset {border: 1px solid #999;}
+#torus.theme-plain #torus-window textarea,
+#torus.theme-plain #torus-window input[type="text"],
+#torus.theme-plain #torus-window input[type="number"] {
+	background-color: #fff;
+	color: #000;
+}
