--- a/ui/themes/creampuff.css
+++ b/ui/themes/creampuff.css
@@ -36,7 +36,7 @@ table#torus-preview-creampuff.torus-theme-preview .text4, #torus.theme-creampuff
 	background-color: #fff;
 }
 #torus.theme-creampuff #torus-tabs span.torus-tab-alert {color: #909;} 
-#torus.theme-creampuff #torus-tabs span.torus-tab-message {color: #f00;} 
+#torus.theme-creampuff #torus-tabs span.torus-tab-message {color: #ff0;} 
 #torus.theme-creampuff #torus-tabs span.torus-tab-ping {color: #f00;}
 #torus.theme-creampuff #torus-tabs span.torus-tab-close {color: #000;}
 #torus.theme-creampuff #torus-tabs span.torus-tab-close:hover {color: #f00;}
