wikia broke all my toys

--- a/ui/main.css
+++ b/ui/main.css
@@ -280,10 +280,10 @@
 
 #torus a.torus-fakelink {cursor: pointer;}
 
-{{MediaWiki:Torus.js/ui/themes/binary.css}}
+{{ui/themes/binary.css}}
 
-{{MediaWiki:Torus.js/ui/themes/creampuff.css}}
+{{ui/themes/creampuff.css}}
 
-{{MediaWiki:Torus.js/ui/themes/default.css}}
+{{ui/themes/default.css}}
 
-{{MediaWiki:Torus.js/ui/themes/plain.css}}
+{{ui/themes/plain.css}}
